# FlashcardGeneration

./: CMakeLists.txt  README.md  splitpinyin_test
.cache/clangd/index/: AnkiManager.cpp.8F727262554E8356.idx  CLIManager.cpp.001C3B420871BE4D.idx  MediaCorpusManager.cpp.219085F04A63A1C9.idx  VocabularyEntry.cpp.ED49F07D1E5EF2C5.idx  VocabularyEntry.h.53BD2BE6A3F028B5.idx  VocabularyEntryTest.cpp.74849869FAEE83E1.idx  VocabularyManager.cpp.5C904B5FB77B019D.idx  json.hpp.178A51CB19F1D098.idx
include/: ReadingEntry.h  VocabularyEntry.h  VocabularyManager.h  pinyinUtils.h
src/: ReadingEntry.cpp  VocabularyEntry.cpp  pinyinUtils.cpp
test/: VocabularyEntryTest.cpp  pinyinUtilsTest.cpp
